[gd_scene load_steps=6 format=3 uid="uid://bgfolw02g0rtq"]

[ext_resource type="Theme" path="res://menu_theme.tres" id="1_chgt2"]
[ext_resource type="Script" path="res://scenes/settings/settings.gd" id="1_oid88"]
[ext_resource type="Script" path="res://scenes/SettingsSubMenuSelector.gd" id="3_njpbm"]
[ext_resource type="PackedScene"  path="res://scenes/settings/controls_sub_menu.tscn" id="4_ogpwa"]
[ext_resource type="PackedScene" path="res://scenes/settings/video_sub_menu.tscn" id="5_llo0m"]

[node name="Settings" type="CanvasLayer" node_paths=PackedStringArray("default_button", "reset_button", "submenu_selector", "video_submenu", "controls_submenu")]
process_mode = 3
script = ExtResource("1_oid88")
default_button = NodePath("MarginContainer/MarginContainer/VBoxContainer/GlobalButtons/HBoxContainer/Default all")
reset_button = NodePath("MarginContainer/MarginContainer/VBoxContainer/GlobalButtons/HBoxContainer/Reset all")
submenu_selector = NodePath("MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector")
video_submenu = NodePath("MarginContainer/MarginContainer/VBoxContainer/SubMenus/VideoSubMenu")
controls_submenu = NodePath("MarginContainer/MarginContainer/VBoxContainer/SubMenus/ControlsSubMenu")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1004, 345)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -502.0
offset_top = -172.5
offset_right = 502.0
offset_bottom = 111.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_chgt2")

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="GlobalButtons" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(984, 61)
layout_mode = 2

[node name="ExitSettings" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/GlobalButtons"]
process_mode = 3
custom_minimum_size = Vector2(82.19, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
text = "<"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/GlobalButtons"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Default all" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/GlobalButtons/HBoxContainer"]
layout_mode = 2
text = "default all"

[node name="Reset all" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/GlobalButtons/HBoxContainer"]
layout_mode = 2
text = "reset all"

[node name="SubMenus" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SubMenuSelector" type="ScrollContainer" parent="MarginContainer/MarginContainer/VBoxContainer/SubMenus" node_paths=PackedStringArray("video_submenu", "key_map_submenu")]
custom_minimum_size = Vector2(210.305, 0)
layout_mode = 2
size_flags_horizontal = 0
vertical_scroll_mode = 0
script = ExtResource("3_njpbm")
video_submenu = NodePath("../VideoSubMenu")
key_map_submenu = NodePath("../ControlsSubMenu")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Video" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector/VBoxContainer"]
layout_mode = 2
text = "video"

[node name="Sounds" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector/VBoxContainer"]
layout_mode = 2
text = "sounds"

[node name="Controls" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector/VBoxContainer"]
layout_mode = 2
text = "controls"

[node name="KeyMapping" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "key mapping"

[node name="VideoSubMenu" parent="MarginContainer/MarginContainer/VBoxContainer/SubMenus" instance=ExtResource("5_llo0m")]
visible = false
layout_mode = 2

[node name="ControlsSubMenu" parent="MarginContainer/MarginContainer/VBoxContainer/SubMenus" instance=ExtResource("4_ogpwa")]
visible = false
layout_mode = 2
mouse_sensitivity_slider = Object(HSlider,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":3,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":0.0,"offset_bottom":0.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":3,"size_flags_vertical":4,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","min_value":0.1,"max_value":5.0,"step":0.01,"page":0.0,"value":0.5,"exp_edit":false,"rounded":false,"allow_greater":false,"allow_lesser":false,"editable":true,"scrollable":true,"tick_count":0,"ticks_on_borders":false,"script":null)

mouse_sensitivity_label = Object(Label,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":3,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":0.0,"offset_bottom":0.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":4,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":2,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","text":"","label_settings":null,"horizontal_alignment":0,"vertical_alignment":0,"autowrap_mode":0,"justification_flags":163,"clip_text":false,"text_overrun_behavior":0,"uppercase":false,"tab_stops":PackedFloat32Array(),"lines_skipped":0,"max_lines_visible":-1,"visible_characters":-1,"visible_characters_behavior":0,"visible_ratio":1.0,"text_direction":0,"language":"","structured_text_bidi_override":0,"structured_text_bidi_override_options":[],"script":null)

default_mouse_sensitivity = Object(Button,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":3,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":0.0,"offset_bottom":0.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","disabled":false,"toggle_mode":false,"button_pressed":false,"action_mode":1,"button_mask":1,"keep_pressed_outside":false,"button_group":null,"shortcut":null,"shortcut_feedback":true,"shortcut_in_tooltip":true,"text":"default","icon":null,"flat":false,"alignment":1,"text_overrun_behavior":0,"clip_text":false,"icon_alignment":0,"vertical_icon_alignment":1,"expand_icon":false,"text_direction":0,"language":"","script":null)

reset_mouse_sensitivity = Object(Button,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":3,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":0.0,"offset_bottom":0.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","disabled":false,"toggle_mode":false,"button_pressed":false,"action_mode":1,"button_mask":1,"keep_pressed_outside":false,"button_group":null,"shortcut":null,"shortcut_feedback":true,"shortcut_in_tooltip":true,"text":"reset","icon":null,"flat":false,"alignment":1,"text_overrun_behavior":0,"clip_text":false,"icon_alignment":0,"vertical_icon_alignment":1,"expand_icon":false,"text_direction":0,"language":"","script":null)

default_submenu_button = Object(Button,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":3,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":0.0,"offset_bottom":0.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","disabled":false,"toggle_mode":false,"button_pressed":false,"action_mode":1,"button_mask":1,"keep_pressed_outside":false,"button_group":null,"shortcut":null,"shortcut_feedback":true,"shortcut_in_tooltip":true,"text":"default controls","icon":null,"flat":false,"alignment":1,"text_overrun_behavior":0,"clip_text":false,"icon_alignment":0,"vertical_icon_alignment":1,"expand_icon":false,"text_direction":0,"language":"","script":null)

reset_submenu_button = Object(Button,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":3,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":0.0,"offset_bottom":0.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","disabled":false,"toggle_mode":false,"button_pressed":false,"action_mode":1,"button_mask":1,"keep_pressed_outside":false,"button_group":null,"shortcut":null,"shortcut_feedback":true,"shortcut_in_tooltip":true,"text":"reset controls","icon":null,"flat":false,"alignment":1,"text_overrun_behavior":0,"clip_text":false,"icon_alignment":0,"vertical_icon_alignment":1,"expand_icon":false,"text_direction":0,"language":"","script":null)


[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/GlobalButtons/ExitSettings" to="." method="exit_settings_menu"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/GlobalButtons/HBoxContainer/Default all" to="." method="default_all_settings"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/GlobalButtons/HBoxContainer/Reset all" to="." method="reset_all_settings"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector/VBoxContainer/Video" to="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector" method="_on_video_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector/VBoxContainer/Sounds" to="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector" method="_on_sounds_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector/VBoxContainer/Controls" to="MarginContainer/MarginContainer/VBoxContainer/SubMenus/SubMenuSelector" method="_on_controls_pressed"]
